# intellikit

./: AGENTS.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  intellikit-ci-test.yml  intellikit-pytest.yml
accordo/: README.md  pyproject.toml
accordo/accordo/: __init__.py  cli.py  result.py  snapshot.py  validator.py
accordo/accordo/_internal/ipc/: communication.py
accordo/accordo/mcp/: server.py
accordo/examples/01_reduction/: README.md
accordo/skill/: SKILL.md
accordo/tests/: test_reduction_validation.py
apptainer/: intellikit.def
docker/: Dockerfile
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.mdx  quickstart.mdx
docs/src/content/docs/guides/: mcp-setup.mdx
docs/src/content/docs/tools/: accordo.mdx  kerncap.mdx  metrix.mdx  nexus.mdx  rocm-mcp.mdx
docs/src/styles/: custom.css
install/skills/: install.sh
install/tools/: install.sh
kerncap/: .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
kerncap/examples/: README.md  extract_and_replay.py  mini_pipeline.hip
kerncap/kerncap/: __init__.py  capturer.py  cli.py  extract.py  hsaco_extractor.py  profiler.py  reproducer.py  source_finder.py  triton_capture.py  validator.py
kerncap/kerncap/mcp/: server.py
kerncap/kerncap/templates/: hip_makefile.j2  hip_reproducer.hip.j2  hsaco_harness.hip.j2  hsaco_makefile.j2  triton_reproducer.py.j2
kerncap/src/: CMakeLists.txt  kerncap.hip  kerncap.hpp  kerncap_log.hpp  replay.cpp
kerncap/tests/: README.md
kerncap/tests/integration/: conftest.py  test_batched_scale.py  test_ck_gemm.py  test_flash_attn.py  test_mini_pipeline.py  test_vector_add.py
kerncap/tests/integration/scripts/: bench_fa.py
kerncap/tests/unit/: test_api.py  test_capturer.py  test_dwarf_source_finder.py  test_extract.py  test_profiler.py  test_reproducer.py  test_source_finder.py  test_validator.py
kerncap/tests/unit/fixtures/: rocprofv3_kernel_stats.csv  sample_triton_kernel.py
kerncap/tests/unit/fixtures/multi_tu/: driver.cu  helpers.cuh  kernels.cu  kernels.cuh
linex/: pyproject.toml
linex/src/linex/: __init__.py
linex/src/linex/mcp/: server.py
metrix/: README.md  pyproject.toml  setup.py
metrix/examples/01_basic_profiling/: README.md
metrix/skill/: SKILL.md
metrix/src/metrix/: __init__.py  api.py
metrix/src/metrix/backends/: __init__.py  base.py  counter_defs.yaml  device_info.py  gfx1030.py  gfx1100.py  gfx1151.py  gfx1201.py  gfx90a.py  gfx942.py  gfx950.py  gpu_query.hip
metrix/src/metrix/cli/: info_cmd.py  list_cmd.py  main.py  profile_cmd.py
metrix/src/metrix/mcp/: server.py
metrix/src/metrix/metrics/: compute_metrics.py  memory_metrics.py
metrix/src/metrix/profiler/: rocprof_wrapper.py
metrix/tests/integration/: test_all_metrics_displayed.py  test_cli_integration.py  test_counter_validation.py  test_inline_hip_profiling.py
metrix/tests/unit/: conftest.py  test_api.py  test_error_handling.py
metrix/tests/unit/backends/: test_backend_metrics.py
nexus/: README.md  pyproject.toml
nexus/examples/01_trace_kernel/: README.md
nexus/examples/02_simple_hip/: README.md
nexus/examples/03_multiple_hip/: README.md
nexus/examples/04_simple_triton/: README.md
nexus/examples/05_multiple_triton/: README.md
nexus/nexus/: __init__.py
nexus/nexus/mcp/: server.py
rocm_mcp/: README.md  pyproject.toml
rocm_mcp/src/rocm_mcp/compile/: hip_compiler_mcp.py
rocm_mcp/src/rocm_mcp/doc/: hip_docs_mcp.py
rocm_mcp/src/rocm_mcp/sysinfo/: rocminfo_mcp.py
uprof_mcp/: pyproject.toml
uprof_mcp/src/uprof_mcp/: uprof_profiler_mcp.py
