# SPDX-License-Identifier: MIT
# Copyright (c) 2025-2026 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["scikit-build-core>=0.3.3", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "intellikit"
version = "0.1.0"
description = "IntelliKit: LLM-ready GPU profiling and analysis toolkit for AMD ROCm"
authors = [
    { name = "Cole Ramos", email = "colramos@amd.com" },
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
    { name = "Yiannis Papadopoulos", email = "ypapadop@amd.com" },
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["accordo", "kerncap", "linex", "metrix", "nexus"]

[project.urls]
Homepage = "https://github.com/AMDResearch/intellikit"
Repository = "https://github.com/AMDResearch/intellikit"
Documentation = "https://github.com/AMDResearch/intellikit/blob/main/README.md"

[tool.uv.sources]
"accordo" = { path = "accordo" }
"kerncap" = { path = "kerncap" }
"linex" = { path = "linex" }
"metrix" = { path = "metrix" }
"nexus" = { path = "nexus" }
"rocm_mcp" = { path = "rocm_mcp" }
"uprof_mcp" = { path = "uprof_mcp" }

[tool.scikit-build]
cmake.build-type = "Release"
# Install all packages with their correct paths
wheel.packages = [
    "accordo",
    "kerncap/kerncap",
    "linex/src/linex",
    "metrix/src/metrix",
    "nexus/nexus",
    "rocm_mcp/src/rocm_mcp",
    "uprof_mcp/src/uprof_mcp"
]

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

# ---- Ruff configuration ----
[tool.ruff]
line-length = 100
exclude = [
    "**/*.ipynb",
    "build/**",
    "test/**",
    "**/resources/**",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # no type annotation for *args
    "ANN003",  # no type annotation for **kwargs
    "BLE001",  # catch blind exception
    "C901",    # McCabe complexity
    "COM812",  # interferes with formatter
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "INP001",  # implicit namespace package
    "LOG015",  # logging on root logger
    "PLC0415", # top-level imports
    "PLR0912", # too many branches
    "PLR0913", # too many arguments in function
    "S101",    # allow assert
    "S603",    # subprocess without shell
    "T201",    # using print
    "TRY401",  # allow exception message
]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true # ignore missing documentation for *args and **kwargs

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
quote-style = "double"
