# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Advanced Micro Devices, Inc. All rights reserved.

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "metrix"
dynamic = ["version"]
description = "Metrix: GPU Profiling. Decoded. Clean metrics for humans, not hardware counters for engineers."
authors = [
    { name = "Muhammad Awad", email = "muhaawad@amd.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "fastmcp>=2.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Profiling",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/AMDResearch/intellikit/tree/main/metrix"
Repository = "https://github.com/AMDResearch/intellikit/tree/main/metrix"
Documentation = "https://github.com/AMDResearch/intellikit/blob/main/metrix/README.md"

[project.scripts]
metrix = "metrix.cli.main:main"
metrix-mcp = "metrix.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# ---- setuptools-scm versioning ----
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.0"
root = ".."

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---- Ruff configuration ----
[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E731", "E741", "F841", "F401"]
